--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebPronto - Agence de création de sites web sur-mesure</title>
     <meta name="description" content="WebPronto - Agence web spécialisée dans la création de sites internet sur-mesure, référencement SEO et hébergement sécurisé. Devis gratuit.">
-    <link rel="stylesheet" href="styles.css?v=6.3">
+    <link rel="stylesheet" href="styles.css?v=6.4">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -398,11 +398,11 @@
                             <label>Quel est votre budget ?</label>
                             <div class="budget-options">
                                 <label class="budget-option">
-                                    <input type="radio" name="budget" value="<200€" checked>
+                                    <input type="radio" name="budget" value="<200€">
                                     <span class="budget-label">&lt;200€</span>
                                 </label>
                                 <label class="budget-option">
-                                    <input type="radio" name="budget" value="200€ - 500€">
+                                    <input type="radio" name="budget" value="200€ - 500€" checked>
                                     <span class="budget-label">200€ - 500€</span>
                                 </label>
                                 <label class="budget-option">
