--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebPronto - Agence de création de sites web sur-mesure</title>
     <meta name="description" content="WebPronto - Agence web spécialisée dans la création de sites internet sur-mesure, référencement SEO et hébergement sécurisé. Devis gratuit.">
-    <link rel="stylesheet" href="styles.css?v=6.4">
+    <link rel="stylesheet" href="styles.css?v=6.5">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -292,7 +292,7 @@
                             <i class="fas fa-building"></i>
                         </div>
                         <div class="portfolio-overlay">
-                            <h4>Site Corporate</h4>
+                            <h4>Site Vitrine</h4>
                             <p>Présence en ligne professionnelle</p>
                             <a href="#" class="portfolio-link">Voir le projet</a>
                         </div>
@@ -537,6 +537,6 @@
         </div>
     </footer>
 
-    <script src="script.js?v=6.0"></script>
+    <script src="script.js?v=6.5"></script>
 </body>
 </html>
